# shellpicker

./: .git-branches.toml  .gitignore  Cargo.toml  LICENSE  Makefile.toml  README.md  renovate.json  rustfmt.toml
.forgejo/workflows/: build.yml
shellpicker/: Cargo.toml
shellpicker/src/: config.rs  console_utils.rs  error.rs  main.rs
